--- a/src/makefile
+++ b/src/makefile
@@ -1,24 +1,26 @@
-IDIR = ../include
-CCOMPILER = gcc
-CFLAGS = -I$(IDIR)
+IDIR =../include
+CC=gcc
+CFLAGS=-I$(IDIR)
 
-OBJECTDIR = ./obj
+ODIR=obj
+LDIR =../lib
 
-LIBRARIES = -lm #Math library
+LIBS=-lm
 
-_DEPENDENCIES = Delaunay.h Subdivision.h QuadEdge.h Edge.h Point.h Predicate.h
-DEPENDENCIES = $(patsubst %,$(IDIR)/%,$(_DEPENDENCIES))
+_DEPS = Delaunay.h Subdivision.h QuadEdge.h Edge.h Point.h Predicate.h
+DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJECTS = Main.o Delaunay.o Subdivision.o QuadEdge.o Edge.o Point.o Predicate.o;
-OBJECTS = $(patsubst %, $(OBJECTDIR)/%,$(_OBJ))
+_OBJ = Main.o Delaunay.o Subdivision.o QuadEdge.o Edge.o Point.o Predicate.o;
+OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
-$(OBJECTDIR)/%.o: %.c $(DEPENDENCIES)
-		$(CCOMPILER) -c -o $@ $< $(CFLAGS)
 
-Triangulate: $(OBJECTS)
-	$(CCOMPILER) -o $@ $^ $(CFLAGS)
+$(ODIR)/%.o: %.c $(DEPS)
+	$(CC) -c -o $@ $< $(CFLAGS)
+
+hellomake: $(OBJ)
+	gcc -o $@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: clean
 
 clean:
-	rm -f $(OBJECTDIR)/*.o *~ core $(IDIR)/*~
+	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~ 
