--- a/src/makefile
+++ b/src/makefile
@@ -17,7 +17,7 @@ OBJECTS = $(patsubst %,$(OBJECTDIR)/%,$(_OBJECTS))
 $(OBJECTDIR)/%.o: %.c $(DEPENDENCIES)
 	$(CCOMPILER) -c -o $@ $< $(CFLAGS)
 
-Simplify.exe: $(OBJECTS)
+Simplify: $(OBJECTS)
 	gcc -o $@ $^ $(CFLAGS) $(LIBRARIES)
 
 .PHONY: clean
