--- a/src/makefile
+++ b/src/makefile
@@ -1,16 +1,16 @@
 INCLUDEDIR =../include
 CCOMPILER=gcc
-CFLAGS = -I$(INCLUDEDIR) -g
+CFLAGS = -I$(INCLUDEDIR) -g -std=c99
 
 OBJECTDIR=obj
 LIBRARYDIR =../lib
 
 LIBRARIES=-lm
 
-_DEPENDENCIES = ExportGML.h ArcsPointsAndOffsets.h PointArrayList.h PointList.h ImportGML.h Delaunay.h Subdivision.h QuadEdge.h Edge.h Point.h Predicate.h
+_DEPENDENCIES = ExportGML.h ArcsPointsAndOffsets.h Delaunay.h Edge.h ExportGML.h ImportGML.h Point.h PointArrayList.h PointList.h Predicate.h QuadEdge.h Subdivision.h UniquePointList.h
 DEPENDENCIES = $(patsubst %,$(INCLUDEDIR)/%,$(_DEPENDENCIES))
 
-_OBJECTS = ExportGML.o ImportGML.o Main.o Delaunay.o Subdivision.o QuadEdge.o Edge.o Point.o Predicate.o;
+_OBJECTS = ArcsPointsAndOffsets.o Delaunay.o Edge.o ExportGML.o ImportGML.o Main.o Point.o Predicate.o QuadEdge.o Subdivision.o
 OBJECTS = $(patsubst %,$(OBJECTDIR)/%,$(_OBJECTS))
 
 
